fixed z-index of overlay

--- a/themes/default/container.less
+++ b/themes/default/container.less
@@ -22,6 +22,7 @@ DIV.widget-container {
     width: 100%;
     display: none;
     text-align: center;
+    z-index: 1100;
   }
   DIV.controls {
     margin: 4px;
